# joy2key

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  joy2key-1.6.1.lsm  joy2key-1.6.3.lsm  joy2key.1  joy2key.c  joy2keyrc.sample  rawscancodes
